--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@
     font-size: 3rem;
     font-weight: 700;
     color: #131313;
+    align-items: center;
 }
 
 /* header styles */
@@ -249,6 +250,36 @@ main {
     display: flex;
     justify-content: space-around;
 }
+
+
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+nav>ul {
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+nav li a {
+    text-decoration: none;
+    color: #424242;
+}
+
+
+
 
 
 /* Responsive media qureies */
